--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^18.8.0",
     "@react-native-firebase/database": "^18.8.0",
@@ -16,6 +21,7 @@
     "@react-navigation/stack": "^6.3.20",
     "base-64": "^1.0.0",
     "expo": "^50.0.6",
+    "expo-font": "~11.10.2",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.7.1",
     "react": "18.2.0",
@@ -25,7 +31,7 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "expo-font": "~11.10.2"
+    "react-native-svg": "^14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
