--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "base-64": "^1.0.0",
     "expo": "^50.0.6",
     "expo-font": "~11.10.2",
+    "expo-splash-screen": "^0.26.4",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.7.1",
     "react": "18.2.0",
