--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/eagle-lake": "^0.2.3",
     "@expo-google-fonts/knewave": "^0.2.3",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
@@ -20,8 +21,9 @@
     "@react-native-firebase/database": "^18.8.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.7",
     "base-64": "^1.0.0",
-    "expo": "^50.0.7",
+    "expo": "^50.0.8",
     "expo-font": "~11.10.3",
     "expo-splash-screen": "^0.26.4",
     "expo-status-bar": "~1.11.1",
