--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.7",
     "base-64": "^1.0.0",
-    "expo": "^50.0.8",
+    "expo": "^50.0.14",
+    "expo-constants": "~15.4.5",
+    "expo-device": "~5.9.3",
     "expo-font": "~11.10.3",
+    "expo-notifications": "~0.27.6",
     "expo-splash-screen": "^0.26.4",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.7.1",
     "react": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "^0.73.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~3.6.2",
