--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.7",
     "base-64": "^1.0.0",
-    "expo": "^50.0.14",
-    "expo-constants": "~15.4.5",
-    "expo-device": "~5.9.3",
+    "expo": "^50.0.17",
+    "expo-constants": "^15.4.6",
+    "expo-device": "^5.9.4",
     "expo-font": "~11.10.3",
-    "expo-notifications": "~0.27.6",
+    "expo-notifications": "^0.27.7",
     "expo-splash-screen": "^0.26.4",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.7.1",
