--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^14.1.0",
-    "react-native-webview": "^13.6.4"
+    "react-native-webview": "^13.6.4",
+    "expo-print": "~12.8.1",
+    "expo-sharing": "~11.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
