--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-clipboard/clipboard": "^1.14.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^18.8.0",
     "@react-native-firebase/database": "^18.8.0",
@@ -28,6 +29,8 @@
     "expo-device": "^5.9.4",
     "expo-font": "~11.10.3",
     "expo-notifications": "^0.27.7",
+    "expo-print": "~12.8.1",
+    "expo-sharing": "~11.10.0",
     "expo-splash-screen": "^0.26.4",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.7.1",
@@ -39,9 +42,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^14.1.0",
-    "react-native-webview": "^13.6.4",
-    "expo-print": "~12.8.1",
-    "expo-sharing": "~11.10.0"
+    "react-native-webview": "^13.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
