--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-clipboard/clipboard": "^1.14.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^18.8.0",
     "@react-native-firebase/database": "^18.8.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@types/react": "~18.2.45",
     "axios": "^1.6.7",
     "base-64": "^1.0.0",
     "expo": "^50.0.17",
@@ -30,6 +32,7 @@
     "expo-font": "~11.10.3",
     "expo-notifications": "^0.27.7",
     "expo-print": "~12.8.1",
+    "expo-secure-store": "~12.8.1",
     "expo-sharing": "~11.10.0",
     "expo-splash-screen": "^0.26.4",
     "expo-status-bar": "~1.11.1",
@@ -43,8 +46,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^14.1.0",
     "react-native-webview": "^13.6.4",
-    "typescript": "^5.3.0",
-    "@types/react": "~18.2.45"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
