--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^18.8.0",
     "@react-native-firebase/database": "^18.8.0",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@types/react": "~18.2.45",
